# ISLP_labs

./: .gitignore  README.md  pyproject.toml
notebooks/: Ch2-statlearn-lab.ipynb  Ch3-linreg-lab.ipynb  Ch4-classification-lab.ipynb  Ch8-baggboost-lab.ipynb
notebooks/exercises/: Ch2-exercises.ipynb  Ch3-exercises.ipynb
notebooks/labs/python/: Ch11-surv-lab.ipynb  Ch12-unsup-lab.ipynb  Ch13-multiple-lab.ipynb  Ch5-resample-lab.ipynb  Ch6-varselect-lab.ipynb  Ch7-nonlin-lab.ipynb  Ch9-svm-lab.ipynb
notebooks/previous_r_translation_work/: C2.4: Exercises Solutions.ipynb  C3.7: Exercises Solutions.ipynb
