[tool.poetry]
name = "islp-poetry"
version = "0.1.0"
description = "Poetry venv for working through the Introduction to Statistical Learning with Pn course"
authors = ["Aaron W Chen <awc33@cornell.edu>"]
readme = "README.md"
packages = [{include = "islp_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
ISLP = "^0.3.18"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
